--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "my-app",
+  "name": "lifesearch",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "books-mock-api": "^0.2.3",
     "react": "^18.2.0",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
